Fix T62939: Incorrect cursor position when exiting UI slider

Differential Revision: https://developer.blender.org/D4629